--- a/.github/workflows/sonar-final.yml
+++ b/.github/workflows/sonar-final.yml
@@ -1,12 +1,42 @@
-name: SonarCloud Final Check
+name: CI/CD Pipeline (Sonar Clean ✅)
 
 on:
   push:
     branches: [main]
-  workflow_dispatch:  # 👈 manual trigger from GitHub UI
 
 jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./Server
+          push: true
+          tags: chrisbug/second-hand-backend:latest
+
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./Client
+          push: true
+          tags: chrisbug/second-hand-frontend:latest
+
   sonar-scan:
+    needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
@@ -36,5 +66,4 @@ jobs:
             -Dsonar.organization=krishkumar54 \
             -Dsonar.sources=. \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN
-
+            -Dsonar.login="${SONAR_TOKEN}"
