--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -13,10 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+      - name: Run SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v2
         with:
-          projectBaseDir: .
+          args: >
+            -Dsonar.projectKey=krishkumar54_college-marketplace
+            -Dsonar.organization=krishkumar54
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.sources=.
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
