--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -2,6 +2,6 @@ FROM node:18-alpine
 WORKDIR /app
 COPY . .
 RUN npm install && npm run build
+RUN npm install -g serve
 EXPOSE 3000
-CMD ["npm", "start"]
-
+CMD ["serve", "-s", "build", "-l", "3000"]
