--- a/Server/package.json
+++ b/Server/package.json
@@ -1,20 +1,29 @@
 {
+  "name": "second-hand-server",
+  "version": "1.0.0",
+  "description": "Backend for Second-Hand Marketplace",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
+  },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.1",
+    "mongoose": "^7.5.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
     "nodemon": "^3.0.1"
   },
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Vanshaj Bhatnagar",
-  "license": "MIT",
-  "description": ""
+  "license": "MIT"
 }
