Fix: stable backend startup for ZAP scan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Start Backend Server
         working-directory: Server
         run: |
-          nohup npm start &
-          sleep 10
+          npm start > server.log 2>&1 &
+          sleep 15
+          curl --retry 5 --retry-delay 5 --fail http://localhost:5001 || (echo "Backend failed to start" && cat server.log && exit 1)
 
       - name: Run ZAP Baseline Scan
         run: |
