Add SonarCloud coverage reporting

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -13,14 +13,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Run SonarCloud Scan
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        working-directory: Server
+        run: npm install
+
+      - name: Run tests with coverage
+        working-directory: Server
+        run: npm test -- --coverage
+
+      - name: Upload coverage to SonarCloud
         uses: SonarSource/sonarqube-scan-action@v2
         with:
           args: >
             -Dsonar.projectKey=krishkumar54_college-marketplace
             -Dsonar.organization=krishkumar54
             -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.sources=.
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
