--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=krishkumar54_college-marketplace
 sonar.organization=krishkumar54
-sonar.host.url=https://sonarcloud.io
-sonar.sources=.
+sonar.host.url = https://sonarcloud.io
 
+sonar.sources=Server
+sonar.tests=Server/__tests__
+sonar.javascript.lcov.reportPaths=Server/coverage/lcov.info
