--- a/Server/package.json
+++ b/Server/package.json
@@ -22,7 +22,10 @@
     "nodemon": "^3.0.1"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["lcov", "text"]
   },
   "author": "Vanshaj Bhatnagar",
   "license": "MIT"
