--- a/zap.yaml
+++ b/zap.yaml
@@ -1,38 +1,36 @@
 env:
   contexts:
-    - excludePaths: []
-      name: baseline
-      urls:
-        - http://localhost:5001
+  - name: baseline
+    urls:
+    - http://localhost:5001
   parameters:
     failOnError: true
     progressToStdout: false
 
 jobs:
-  - parameters:
+  - type: passiveScan-config
+    parameters:
       enableTags: false
       maxAlertsPerRule: 10
-    type: passiveScan-config
 
-  - parameters:
+  - type: spider
+    parameters:
       maxDuration: 1
       url: http://localhost:5001
-    type: spider
 
-  - parameters:
+  - type: passiveScan-wait
+    parameters:
       maxDuration: 0
-    type: passiveScan-wait
 
-  - parameters:
+  - type: outputSummary
+    parameters:
       format: Long
       summaryFile: /home/zap/zap_out.json
-    rules: []
-    type: outputSummary
 
-  - parameters:
+  - type: report
+    parameters:
       reportDescription: ''
       reportDir: /zap/wrk/
       reportFile: zap_report.html
       reportTitle: ZAP Scanning Report
       template: traditional-html
-    type: report
