--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.projectKey=krishkumar54_college-marketplace
 sonar.organization=krishkumar54
-sonar.host.url = https://sonarcloud.io
+sonar.host.url=https://sonarcloud.io
 
 sonar.sources=Server
-sonar.tests=Server/__tests__
+sonar.tests=Server/tests        # ✅ use actual test folder path if different
+sonar.test.inclusions=**/*.test.js,**/*.spec.js
 sonar.javascript.lcov.reportPaths=Server/coverage/lcov.info
