--- a/Client/package.json
+++ b/Client/package.json
@@ -11,31 +11,42 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@uiball/loaders": "^1.3.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "react-icons": "^4.11.0",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
-    "web-vitals": "^2.1.4",
-    "jsonwebtoken": "^9.0.2",
-    "@uiball/loaders": "^1.3.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "tailwindcss": "^3.3.3"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "author": "Vanshaj Bhatnagar",
   "license": "MIT"
 }
-
