--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   mongo:
     image: mongo
@@ -10,7 +9,7 @@ services:
     ports:
       - "5001:5001"
     environment:
-      - MONGO_URL=mongodb://mongo:27017/marketplace
+      - MONGO_URI=mongodb://mongo:27017/marketplace
     depends_on:
       - mongo
 
